BUILD: add multiple integration tests according to section 20.