@@ -1,11 +1,11 @@
 package henrique.corrales.bootcamp.integrationtests.controllers.json;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import henrique.corrales.bootcamp.config.TestConfigs;
 import henrique.corrales.bootcamp.data.PersonDTO;
+import henrique.corrales.bootcamp.data.wrappers.json.WrapperPersonDTO;
 import henrique.corrales.bootcamp.integrationtests.testcontainers.AbstractIntegrationTest;
 import io.restassured.RestAssured;
 import io.restassured.builder.RequestSpecBuilder;
@@ -16,7 +16,6 @@ import io.restassured.specification.RequestSpecification;
 import org.junit.jupiter.api.*;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.web.server.LocalServerPort;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 
 import java.util.List;
@@ -165,10 +164,6 @@ class PersonControllerJsonTest extends AbstractIntegrationTest {
 
         assertNotNull(createdPerson.getId());
         assertTrue(createdPerson.getId() > 0);
-        assertEquals("Marco", createdPerson.getFirstName());
-        assertEquals("Marchiori", createdPerson.getLastName());
-        assertEquals("Los Angeles", createdPerson.getAddress());
-        assertEquals("Male", createdPerson.getGender());
         assertFalse(createdPerson.getEnabled());
     }
 
@@ -190,6 +185,7 @@ class PersonControllerJsonTest extends AbstractIntegrationTest {
 
         var content = given(specification)
                 .accept(MediaType.APPLICATION_JSON_VALUE)
+                .queryParams("page", 3, "size", 12, "direction", "asc")
                 .when()
                 .get()
                 .then()
@@ -199,30 +195,66 @@ class PersonControllerJsonTest extends AbstractIntegrationTest {
                 .body()
                 .asString();
 
-        List<PersonDTO> people = objectMapper.readValue(content, new TypeReference<List<PersonDTO>>() {
-        });
+        WrapperPersonDTO wrapper = objectMapper.readValue(content, WrapperPersonDTO.class);
+        List<PersonDTO> people = wrapper.getEmbeddedDTO().getPeople();
 
-        PersonDTO personOne = people.get(0);
+        PersonDTO personOne = people.getFirst();
         person = personOne;
 
         assertNotNull(personOne.getId());
         assertTrue(personOne.getId() > 0);
 
-        assertEquals("Ayrton", personOne.getFirstName());
-        assertEquals("Senna", personOne.getLastName());
-        assertEquals("São Paulo - Brasil", personOne.getAddress());
+        assertEquals("Alyosha", personOne.getFirstName());
+        assertEquals("Waterman", personOne.getLastName());
+        assertEquals("Suite 35", personOne.getAddress());
         assertEquals("Male", personOne.getGender());
+        assertTrue(personOne.getEnabled());
 
-        PersonDTO personFive = people.get(4);
-        person = personFive;
+        PersonDTO personTwo = people.get(1);
+        person = personTwo;
 
-        assertNotNull(personFive.getId());
-        assertTrue(personFive.getId() > 0);
+        assertNotNull(personTwo.getId());
+        assertTrue(personTwo.getId() > 0);
 
-        assertEquals("Muhammad", personFive.getFirstName());
-        assertEquals("Ali", personFive.getLastName());
-        assertEquals("Kentucky - US", personFive.getAddress());
-        assertEquals("Male", personFive.getGender());
+        assertEquals("Alyssa", personTwo.getFirstName());
+        assertEquals("Notman", personTwo.getLastName());
+        assertEquals("PO Box 93622", personTwo.getAddress());
+        assertEquals("Female", personTwo.getGender());
+        assertTrue(personTwo.getEnabled());
+    }
+
+@Test
+    @Order(7)
+//{{baseUrl}}/api/person/v1/findPeopleByName/tes
+    void findByNameTest() throws JsonProcessingException {
+
+        var content = given(specification)
+                .accept(MediaType.APPLICATION_JSON_VALUE)
+                .pathParam("firstName", "tes")
+                .queryParams("page", 0, "size", 10, "direction", "asc")
+                .when()
+                .get("findPeopleByName/{firstName}")
+                .then()
+                .statusCode(200)
+                .contentType(MediaType.APPLICATION_JSON_VALUE)
+                .extract()
+                .body()
+                .asString();
+
+        WrapperPersonDTO wrapper = objectMapper.readValue(content, WrapperPersonDTO.class);
+        List<PersonDTO> people = wrapper.getEmbeddedDTO().getPeople();
+
+        PersonDTO personOne = people.getFirst();
+        person = personOne;
+
+        assertNotNull(personOne.getId());
+        assertTrue(personOne.getId() > 0);
+
+        assertEquals("Gates", personOne.getFirstName());
+        assertEquals("Pudsey", personOne.getLastName());
+        assertEquals("Suite 84", personOne.getAddress());
+        assertEquals("Female", personOne.getGender());
+        assertFalse(personOne.getEnabled());
     }
 
 
