@@ -1,10 +1,9 @@
 package henrique.corrales.bootcamp.integrationtests.controllers.yaml;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import henrique.corrales.bootcamp.config.TestConfigs;
 import henrique.corrales.bootcamp.data.PersonDTO;
+import henrique.corrales.bootcamp.data.wrappers.xml.PagedModelPerson;
 import henrique.corrales.bootcamp.integrationtests.testcontainers.AbstractIntegrationTest;
 import henrique.corrales.bootcamp.integrationtests.controllers.yaml.mapper.YAMLMapper;
 import io.restassured.RestAssured;
@@ -204,12 +203,13 @@ class PersonControllerYamlTest extends AbstractIntegrationTest {
                 .statusCode(204);
     }
 
+
     @Test
     @Order(6)
     void findAllTest() throws JsonProcessingException {
-
-        var content = given(specification)
+        var response = given(specification)
                 .accept(MediaType.APPLICATION_YAML_VALUE)
+                .queryParams("page", 3, "size", 12, "direction", "asc")
                 .when()
                 .get()
                 .then()
@@ -217,34 +217,65 @@ class PersonControllerYamlTest extends AbstractIntegrationTest {
                 .contentType(MediaType.APPLICATION_YAML_VALUE)
                 .extract()
                 .body()
-                .as(PersonDTO[].class, objectMapper);
+                .as(PagedModelPerson.class, objectMapper);
 
-        List<PersonDTO> people = Arrays.asList(content);
+        List<PersonDTO> people = response.getContent();
 
-        PersonDTO personOne = people.get(0);
+        PersonDTO personOne = people.getFirst();
         person = personOne;
 
         assertNotNull(personOne.getId());
         assertTrue(personOne.getId() > 0);
 
-        assertEquals("Ayrton", personOne.getFirstName());
-        assertEquals("Senna", personOne.getLastName());
-        assertEquals("São Paulo - Brasil", personOne.getAddress());
+        assertEquals("Alyosha", personOne.getFirstName());
+        assertEquals("Waterman", personOne.getLastName());
+        assertEquals("Suite 35", personOne.getAddress());
         assertEquals("Male", personOne.getGender());
+        assertTrue(personOne.getEnabled());
 
-        PersonDTO personFive = people.get(4);
-        person = personFive;
+        PersonDTO personTwo = people.get(1);
+        person = personTwo;
 
-        assertNotNull(personFive.getId());
-        assertTrue(personFive.getId() > 0);
+        assertNotNull(personTwo.getId());
+        assertTrue(personTwo.getId() > 0);
 
-        assertEquals("Muhammad", personFive.getFirstName());
-        assertEquals("Ali", personFive.getLastName());
-        assertEquals("Kentucky - US", personFive.getAddress());
-        assertEquals("Male", personFive.getGender());
+        assertEquals("Alyssa", personTwo.getFirstName());
+        assertEquals("Notman", personTwo.getLastName());
+        assertEquals("PO Box 93622", personTwo.getAddress());
+        assertEquals("Female", personTwo.getGender());
+        assertTrue(personTwo.getEnabled());
     }
 
+    @Test
+    @Order(7)
+    void findByNameTest() throws JsonProcessingException {
+        var response = given(specification)
+                .accept(MediaType.APPLICATION_YAML_VALUE)
+                .pathParam("firstName", "tes")
+                .queryParams("page", 0, "size", 10, "direction", "asc")
+                .when()
+                .get("findPeopleByName/{firstName}")
+                .then()
+                .statusCode(200)
+                .contentType(MediaType.APPLICATION_YAML_VALUE)
+                .extract()
+                .body()
+                .as(PagedModelPerson.class, objectMapper);
 
+        List<PersonDTO> people = response.getContent();
+
+        PersonDTO personOne = people.getFirst();
+        person = personOne;
+
+        assertNotNull(personOne.getId());
+        assertTrue(personOne.getId() > 0);
+
+        assertEquals("Gates", personOne.getFirstName());
+        assertEquals("Pudsey", personOne.getLastName());
+        assertEquals("Suite 84", personOne.getAddress());
+        assertEquals("Female", personOne.getGender());
+        assertFalse(personOne.getEnabled());
+    }
 
     private void mockPerson() {
         person.setFirstName("John");
